--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,22 @@
 {
     "name": "pythonlearn/collaboration-platform",
-    "description": "Python 教學多人協作平台 - 純 PHP + Ratchet WebSocket",
+    "description": "Python 教學多人協作平台",
     "type": "project",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "PythonLearn Team",
-            "email": "team@pythonlearn.com"
-        }
-    ],
     "require": {
-        "php": "^8.1",
-        "cboden/ratchet": "^0.4.4",
-        "guzzlehttp/guzzle": "^7.5",
-        "monolog/monolog": "^3.0",
-        "vlucas/phpdotenv": "^5.5"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^10.0"
+        "php": ">=8.0"
     },
     "autoload": {
         "psr-4": {
-            "App\\": "backend/classes/",
-            "WebSocket\\": "websocket/"
+            "App\\": "backend/classes/"
         }
-    },
-    "scripts": {
-        "websocket:start": "php websocket/server.php",
-        "websocket:stop": "pkill -f 'php websocket/server.php'",
-        "test": "phpunit tests/"
     },
     "config": {
         "optimize-autoloader": true,
-        "preferred-install": "dist",
+        "allow-plugins": {
+            "*": true
+        },
+        "platform-check": false,
         "sort-packages": true
     },
     "minimum-stability": "stable",
