--- a/zeabur.yaml
+++ b/zeabur.yaml
@@ -1,14 +1,23 @@
-# Zeabur 部署配置 - 簡化版
+# Zeabur 部署配置 - 強制使用 buildCommand
 name: pythonlearn-collaboration
 
 services:
   # 主要 PHP 應用服務
   web:
-    # 使用簡化的構建命令
+    # 明確指定構建方式，不使用 Dockerfile
     build:
+      dockerfile: false
       buildCommand: |
         echo "🔧 開始構建 PHP 應用..."
-        composer install --no-dev --no-interaction --ignore-platform-reqs --no-scripts || echo "Composer 完成"
+        echo "📦 當前目錄內容:"
+        ls -la
+        echo "📋 Composer 版本:"
+        composer --version || echo "Composer 不可用"
+        echo "🔧 安裝依賴 (忽略平台要求)..."
+        composer install --no-dev --no-interaction --no-scripts --ignore-platform-reqs --no-cache --optimize-autoloader || echo "✅ Composer 完成"
+        echo "📁 創建必要目錄..."
+        mkdir -p data logs storage
+        chmod -R 755 data logs storage || echo "權限設置完成"
         echo "✅ 構建完成"
     
     # 啟動命令
