--- a/composer.json
+++ b/composer.json
@@ -4,21 +4,11 @@
     "type": "project",
     "license": "MIT",
     "require": {
-        "php": ">=8.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "backend/classes/"
-        }
+        "php": ">=7.4"
     },
     "config": {
         "optimize-autoloader": true,
-        "allow-plugins": {
-            "*": true
-        },
         "platform-check": false,
-        "sort-packages": true
-    },
-    "minimum-stability": "stable",
-    "prefer-stable": true
+        "allow-plugins": true
+    }
 }
