--- a/Dockerfile.zeabur
+++ b/Dockerfile.zeabur
@@ -1,43 +1,132 @@
-# Zeabur 專用 Dockerfile - 修復版
-FROM php:8.1-cli
+# Zeabur 部署專用 Dockerfile - 雙服務架構
+FROM php:8.2-cli
 
 # 安裝系統依賴
 RUN apt-get update && apt-get install -y \
+    supervisor \
+    nginx \
     curl \
     zip \
     unzip \
     git \
+    libzip-dev \
+    && docker-php-ext-install \
+    zip \
+    sockets \
+    pdo \
+    pdo_mysql \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
 # 安裝 Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
-# 設置工作目錄
+# 設定工作目錄
 WORKDIR /app
 
-# 複製 composer 檔案
-COPY composer.json ./
-
-# 安裝 PHP 依賴 - 使用最寬鬆的設置並添加錯誤處理
-RUN composer install \
-    --no-dev \
-    --no-interaction \
-    --no-scripts \
-    --ignore-platform-reqs \
-    --no-cache \
-    --optimize-autoloader \
-    || echo "Composer 安裝完成 (可能有警告)"
-
-# 複製應用代碼
+# 複製應用檔案
 COPY . .
 
+# 安裝 PHP 依賴
+RUN composer install --no-dev --optimize-autoloader
+
 # 創建必要目錄
-RUN mkdir -p /app/data /app/logs /app/storage \
-    && chmod -R 755 /app/data /app/logs /app/storage
+RUN mkdir -p /var/log/supervisor \
+    && mkdir -p /app/logs \
+    && mkdir -p /app/data/rooms \
+    && chmod -R 755 /app/logs \
+    && chmod -R 755 /app/data
+
+# 創建 Supervisor 配置
+RUN cat > /etc/supervisor/conf.d/supervisord.conf << 'EOF'
+[supervisord]
+nodaemon=true
+user=root
+logfile=/var/log/supervisor/supervisord.log
+pidfile=/var/run/supervisord.pid
+
+[program:web-server]
+command=php -S 0.0.0.0:8080 -t /app/public /app/router.php
+directory=/app
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/supervisor/web-server.err.log
+stdout_logfile=/var/log/supervisor/web-server.out.log
+environment=PATH="/usr/local/bin:/usr/bin:/bin"
+
+[program:websocket-server]
+command=php /app/test-servers/stable-websocket-server.php
+directory=/app
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/supervisor/websocket-server.err.log
+stdout_logfile=/var/log/supervisor/websocket-server.out.log
+environment=PATH="/usr/local/bin:/usr/bin:/bin",WEBSOCKET_HOST="0.0.0.0",WEBSOCKET_PORT="8081"
+
+[unix_http_server]
+file=/var/run/supervisor.sock
+chmod=0700
+
+[supervisorctl]
+serverurl=unix:///var/run/supervisor.sock
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+EOF
+
+# 創建啟動腳本
+RUN cat > /app/start.sh << 'EOF'
+#!/bin/bash
+
+# 設定環境變數
+export WEBSOCKET_HOST=${WEBSOCKET_HOST:-0.0.0.0}
+export WEBSOCKET_PORT=${WEBSOCKET_PORT:-8081}
+
+# 檢查必要檔案
+if [ ! -f "/app/test-servers/stable-websocket-server.php" ]; then
+    echo "❌ WebSocket 服務器檔案不存在"
+    exit 1
+fi
+
+if [ ! -f "/app/router.php" ]; then
+    echo "❌ 路由器檔案不存在"
+    exit 1
+fi
+
+# 創建狀態檢查端點
+cat > /app/public/health.php << 'HEALTH_EOF'
+<?php
+header('Content-Type: application/json');
+
+$status = [
+    'status' => 'healthy',
+    'timestamp' => date('c'),
+    'services' => [
+        'web' => 'running',
+        'websocket' => 'running'
+    ]
+];
+
+echo json_encode($status);
+HEALTH_EOF
+
+echo "🚀 啟動 Zeabur 雙服務架構..."
+echo "📡 Web 服務器: 0.0.0.0:8080"
+echo "🔌 WebSocket 服務器: ${WEBSOCKET_HOST}:${WEBSOCKET_PORT}"
+
+# 啟動 Supervisor
+exec /usr/bin/supervisord -c /etc/supervisor/conf.d/supervisord.conf
+EOF
+
+# 設定執行權限
+RUN chmod +x /app/start.sh
 
 # 暴露端口
-EXPOSE 8080
+EXPOSE 8080 8081
 
-# 啟動命令
-CMD ["php", "-S", "0.0.0.0:8080", "-t", "public", "router.php"] 
+# 健康檢查
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:8080/health.php || exit 1
+
+# 啟動應用
+CMD ["/app/start.sh"] 
