--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,28 @@
     "type": "project",
     "license": "MIT",
     "require": {
-        "php": ">=7.4"
+        "php": ">=8.1",
+        "ratchet/pawl": "^0.4",
+        "ratchet/rfc6455": "^1.4",
+        "react/socket": "^1.12",
+        "ext-sockets": "*",
+        "ext-json": "*",
+        "ext-mbstring": "*",
+        "ext-curl": "*"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "backend/classes/"
+        }
     },
     "config": {
         "optimize-autoloader": true,
         "platform-check": false,
         "allow-plugins": true
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "echo '✅ 依賴安裝完成'"
+        ]
     }
 }
