--- a/zeabur.yaml
+++ b/zeabur.yaml
@@ -1,11 +1,11 @@
-# Zeabur 部署配置 - 雙服務架構解決 WebSocket 問題
+# Zeabur 部署配置 - 簡化單服務架構
 name: python-learn
 
 services:
   # 主要 Web 服務 (PHP + WebSocket)
   web:
     build:
-      dockerfile: Dockerfile.zeabur
+      dockerfile: Dockerfile.simple
     
     # 環境變數配置
     env:
@@ -35,48 +35,28 @@ services:
     
     # 暴露端口
     ports:
-      - 8080  # HTTP 服務器
-      - 8081  # WebSocket 服務器
+      - 8080
+      - 8081
     
     # 健康檢查
     healthcheck:
-      path: /api.php/status
+      path: /health.php
       interval: 30s
       timeout: 10s
       retries: 3
     
-    # 資源限制
+    # 資源配置
     resources:
-      cpu: 1000m
-      memory: 512Mi
-
-  # Caddy 反向代理服務
-  caddy:
-    build:
-      dockerfile: Dockerfile.caddy
+      cpu: 1000m      # 1 CPU core
+      memory: 512Mi   # 512MB RAM
     
-    # 環境變數
-    env:
-      DOMAIN: ${ZEABUR_WEB_DOMAIN}
-      WEB_SERVICE: "web"
-      WEB_PORT: "8080"
-      WEBSOCKET_PORT: "8081"
-    
-    # 暴露端口
-    ports:
-      - 80
-      - 443
-    
-    # 依賴 web 服務
-    depends_on:
-      - web
-    
-    # 健康檢查
-    healthcheck:
-      path: /health
-      interval: 30s
-      timeout: 5s
-      retries: 3
+    # 域名配置
+    domains:
+      - domain: ${ZEABUR_WEB_DOMAIN}
+        redirects:
+          - from: /ws
+            to: ws://localhost:8081
+            type: websocket
 
 # 全域配置
 configs:
