--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
     "license": "MIT",
     "require": {
         "php": ">=8.1",
+        "ratchet/pawl": "^0.4",
+        "ratchet/rfc6455": "^1.4",
+        "react/socket": "^1.12",
         "ext-sockets": "*",
         "ext-json": "*",
         "ext-mbstring": "*"
@@ -28,7 +31,7 @@
     },
     "scripts": {
         "post-install-cmd": [
-            "echo '✅ 基礎依賴安裝完成'"
+            "echo '✅ Ratchet WebSocket 依賴安裝完成'"
         ]
     }
 }
