--- a/Dockerfile.zeabur
+++ b/Dockerfile.zeabur
@@ -1,10 +1,9 @@
-# Zeabur 部署專用 Dockerfile - 雙服務架構
+# Zeabur 部署專用 Dockerfile - 雙服務架構 (穩定版)
 FROM php:8.2-cli
 
 # 安裝系統依賴
 RUN apt-get update && apt-get install -y \
     supervisor \
-    nginx \
     curl \
     zip \
     unzip \
@@ -38,96 +37,61 @@ RUN mkdir -p /var/log/supervisor \
     && chmod -R 755 /app/logs \
     && chmod -R 755 /app/data
 
+# 創建健康檢查端點
+RUN echo '<?php' > /app/public/health.php && \
+    echo 'header("Content-Type: application/json");' >> /app/public/health.php && \
+    echo 'echo json_encode([' >> /app/public/health.php && \
+    echo '    "status" => "healthy",' >> /app/public/health.php && \
+    echo '    "timestamp" => date("c"),' >> /app/public/health.php && \
+    echo '    "services" => [' >> /app/public/health.php && \
+    echo '        "http" => "running",' >> /app/public/health.php && \
+    echo '        "websocket" => "running"' >> /app/public/health.php && \
+    echo '    ],' >> /app/public/health.php && \
+    echo '    "ports" => [8080, 8081]' >> /app/public/health.php && \
+    echo ']);' >> /app/public/health.php
+
 # 創建 Supervisor 配置
-RUN cat > /etc/supervisor/conf.d/supervisord.conf << 'EOF'
-[supervisord]
-nodaemon=true
-user=root
-logfile=/var/log/supervisor/supervisord.log
-pidfile=/var/run/supervisord.pid
-
-[program:web-server]
-command=php -S 0.0.0.0:8080 -t /app/public /app/router.php
-directory=/app
-autostart=true
-autorestart=true
-stderr_logfile=/var/log/supervisor/web-server.err.log
-stdout_logfile=/var/log/supervisor/web-server.out.log
-environment=PATH="/usr/local/bin:/usr/bin:/bin"
-
-[program:websocket-server]
-command=bash -c 'if [ -f "vendor/autoload.php" ] && php -r "require \"vendor/autoload.php\"; echo \"Ratchet available\";" 2>/dev/null; then echo "✅ 使用 Ratchet WebSocket 服務器"; php /app/test-servers/stable-websocket-server.php; else echo "⚠️ Ratchet 不可用，使用原生 WebSocket 服務器"; php /app/test-servers/native-websocket-server.php; fi'
-directory=/app
-autostart=true
-autorestart=true
-stderr_logfile=/var/log/supervisor/websocket-server.err.log
-stdout_logfile=/var/log/supervisor/websocket-server.out.log
-environment=PATH="/usr/local/bin:/usr/bin:/bin",WEBSOCKET_HOST="0.0.0.0",WEBSOCKET_PORT="8081"
-
-[unix_http_server]
-file=/var/run/supervisor.sock
-chmod=0700
-
-[supervisorctl]
-serverurl=unix:///var/run/supervisor.sock
-
-[rpcinterface:supervisor]
-supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
-EOF
-
-# 創建啟動腳本
-RUN cat > /app/start.sh << 'EOF'
-#!/bin/bash
-
-# 設定環境變數
-export WEBSOCKET_HOST=${WEBSOCKET_HOST:-0.0.0.0}
-export WEBSOCKET_PORT=${WEBSOCKET_PORT:-8081}
-
-# 檢查必要檔案
-if [ ! -f "/app/test-servers/stable-websocket-server.php" ]; then
-    echo "❌ WebSocket 服務器檔案不存在"
-    exit 1
-fi
-
-if [ ! -f "/app/router.php" ]; then
-    echo "❌ 路由器檔案不存在"
-    exit 1
-fi
-
-# 創建狀態檢查端點
-cat > /app/public/health.php << 'HEALTH_EOF'
-<?php
-header('Content-Type: application/json');
-
-$status = [
-    'status' => 'healthy',
-    'timestamp' => date('c'),
-    'services' => [
-        'web' => 'running',
-        'websocket' => 'running'
-    ]
-];
-
-echo json_encode($status);
-HEALTH_EOF
-
-echo "🚀 啟動 Zeabur 雙服務架構..."
-echo "📡 Web 服務器: 0.0.0.0:8080"
-echo "🔌 WebSocket 服務器: ${WEBSOCKET_HOST}:${WEBSOCKET_PORT}"
-
-# 啟動 Supervisor
-exec /usr/bin/supervisord -c /etc/supervisor/conf.d/supervisord.conf
-EOF
-
-# 設定執行權限
-RUN chmod +x /app/start.sh
+RUN echo '[supervisord]' > /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'nodaemon=true' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'user=root' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'logfile=/var/log/supervisor/supervisord.log' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'pidfile=/var/run/supervisord.pid' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'childlogdir=/var/log/supervisor' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo '' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo '[unix_http_server]' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'file=/var/run/supervisor.sock' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'chmod=0700' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo '' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo '[supervisorctl]' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'serverurl=unix:///var/run/supervisor.sock' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo '' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo '[rpcinterface:supervisor]' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo '' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo '[program:http-server]' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'command=php -S 0.0.0.0:8080 -t public router.php' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'directory=/app' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'autostart=true' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'autorestart=true' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'stderr_logfile=/var/log/supervisor/http-server.err.log' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'stdout_logfile=/var/log/supervisor/http-server.out.log' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'environment=PATH="/usr/local/bin:/usr/bin:/bin"' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo '' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo '[program:websocket-server]' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'command=bash -c "if [ -f vendor/autoload.php ]; then echo Using Ratchet; php test-servers/stable-websocket-server.php; else echo Using Native; php test-servers/native-websocket-server.php; fi"' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'directory=/app' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'autostart=true' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'autorestart=true' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'stderr_logfile=/var/log/supervisor/websocket-server.err.log' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'stdout_logfile=/var/log/supervisor/websocket-server.out.log' >> /etc/supervisor/conf.d/supervisord.conf && \
+    echo 'environment=PATH="/usr/local/bin:/usr/bin:/bin",WEBSOCKET_HOST="0.0.0.0",WEBSOCKET_PORT="8081"' >> /etc/supervisor/conf.d/supervisord.conf
 
 # 暴露端口
 EXPOSE 8080 8081
 
 # 健康檢查
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+HEALTHCHECK --interval=30s --timeout=10s --start-period=10s --retries=3 \
     CMD curl -f http://localhost:8080/health.php || exit 1
 
-# 啟動應用
-CMD ["/app/start.sh"] 
+# 啟動 Supervisor
+CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"] 
