🔧 修復 Composer 依賴問題 - 回到穩定的單服務架構

--- a/Dockerfile.zeabur
+++ b/Dockerfile.zeabur
@@ -27,8 +27,8 @@ WORKDIR /app
 COPY . .
 
 # 安裝 PHP 依賴 (容錯處理)
-RUN composer install --no-dev --optimize-autoloader --no-interaction --no-scripts || \
-    echo "⚠️ Composer 安裝失敗，使用原生 WebSocket 服務器"
+RUN composer install --no-dev --optimize-autoloader --no-interaction --no-scripts --ignore-platform-reqs || \
+    echo "⚠️ Composer 安裝失敗，繼續使用原生 WebSocket 服務器"
 
 # 創建必要目錄
 RUN mkdir -p /var/log/supervisor \
