--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,6 @@
     "license": "MIT",
     "require": {
         "php": ">=8.1",
-        "ratchet/pawl": "^0.4",
-        "ratchet/rfc6455": "^1.4",
-        "react/socket": "^1.12",
         "ext-sockets": "*",
         "ext-json": "*",
         "ext-mbstring": "*"
@@ -31,7 +28,7 @@
     },
     "scripts": {
         "post-install-cmd": [
-            "echo '✅ Ratchet WebSocket 依賴安裝完成'"
+            "echo '✅ 基礎依賴安裝完成，將使用原生 WebSocket 服務器'"
         ]
     }
 }
