--- a/.zeaburignore
+++ b/.zeaburignore
@@ -36,5 +36,46 @@ temp/
 logs/
 storage/
 
-# 忽略 Composer 依賴 (讓 Zeabur 重新安裝)
-vendor/ 
+# Zeabur 部署忽略文件
+
+# 開發和測試文件
+test-integrated-server.php
+README-PHP.md
+*.md
+
+# Git 相關
+.git/
+.gitignore
+
+# IDE 和編輯器
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# 系統文件
+.DS_Store
+Thumbs.db
+
+# 日誌文件
+*.log
+logs/
+
+# 臨時文件
+tmp/
+temp/
+cache/
+
+# 備份文件
+*.bak
+*.backup
+
+# 舊版本文件 (如果有)
+websocket/
+vendor/
+node_modules/
+
+# 測試文件
+tests/
+phpunit.xml 
